hide weather div on default/added error div when fat finger

--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
             <button type="button">Search</button>
         </div>
         <!-- ---- -->
+        <div class="error">
+            <p>Incorrect city name</p>
+        </div>
+        <!-- ---- -->
 
         <div class = "weather">
             <h1 class= "temp">22°c</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <p>Humidity <span class = "humidity"> 50%</span></p>
+                    <p>Humidity: <span class = "humidity"> 50%</span></p>
                     <!-- <p class ="humidity">50%</p> -->
                 </div>
                 <div class="col">
-                    <p>Wind speed <span class="wind">15km/hr</span></p>
+                    <p>Wind speed: <span class="wind">15km/hr</span></p>
                    
                 </div>
             </div>
