improved the css, added options for current, weekly and 16Day Weather buttons

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <div id="search">
             <label class="searchLabel" for ="city"> City:</label>
             <input type ="text" id ="searchInput" placeholder="enter city name" spellcheck="false">
-         </div>
-     <button  id="searchBtn" type="button">Search</button>
+        </div>
+        <div id="navButtons">
+            <button  class="btn current" type="button">Current</button>
+            <button  class="btn weekly" type="button">Weekly </button>
+            <button  class="btn sixteen" type="button">16 Days </button>
+        </div>
        
         <!-- ---- -->
         <div class="error">
