added javascript to handle the weekly button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
             </div>
         </div>
         <!-- ------ -->
-   </div>
+        <div id="weekly">
+    
+        </div>
+   
+    </div>
+
+  
 
    <script src ="ap.js" defer></script>
   
